feat: added nodemon for dev server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "server for xengine-store project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "Ilya Kruchinin",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
   }
 }
