--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"description": "server for xengine-store project",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon index.js"
+		"dev": "nodemon index.js",
+        "start": "node index.js"
 	},
 	"author": "Ilya Kruchinin",
 	"license": "ISC",
